# tgcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPROVEMENT_IDEAS.md  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/adr/: 0001-data-driven-resource-definitions.md  0002-ratatui-tui-framework.md  0003-async-tokio-runtime.md  README.md
src/: app.rs  config.rs  event.rs  main.rs  notification.rs
src/gcp/: auth.rs  client.rs  http.rs  mod.rs  projects.rs
src/resource/: fetcher.rs  mod.rs  registry.rs  sdk_dispatch.rs
src/resources/: billing.json  cdn.json  common.json  compute.json  gke.json  storage.json
src/shell/: mod.rs
src/theme/: mod.rs
src/ui/: column_config.rs  command_box.rs  dialog.rs  header.rs  help.rs  mod.rs  notifications.rs  projects.rs  splash.rs  zones.rs
tests/: http_integration.rs  proptest_filters.rs
